# CaptainAsteroid

./: .gitignore  README.md  buildPlugin.sh
Assets/Plugins/: Test.cs  (+2 more)
NativePlugin/CaptainAsteroid/: CMakeLists.txt  buildDLL.sh  conanfile.py
NativePlugin/CaptainAsteroid/cmake/: Conan.cmake
NativePlugin/CaptainAsteroid/cmakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CaptainAsteroid.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.txt  conaninfo.txt  fmt-config-version.cmake  fmt-config.cmake  fmtTarget-release.cmake  fmtTargets.cmake  graph_info.json  install_manifest.txt  spdlog-config-version.cmake  spdlog-config.cmake  spdlogTarget-release.cmake  spdlogTargets.cmake
NativePlugin/CaptainAsteroid/cmakeBuild/src/: CaptainAsteroid.vcxproj  CaptainAsteroid.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
NativePlugin/CaptainAsteroid/cmakeBuild/src/CaptainAsteroid.dir/Release/: CaptainAsteroid.dll.recipe
NativePlugin/CaptainAsteroid/cmakeBuild/src/Release/: CaptainAsteroid.exp  CaptainAsteroid.lib
NativePlugin/CaptainAsteroid/cmakeBuild/src/physics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Physics.vcxproj  Physics.vcxproj.filters  cmake_install.cmake
NativePlugin/CaptainAsteroid/cmakeBuild/src/utils/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Utils.vcxproj  Utils.vcxproj.filters  cmake_install.cmake
NativePlugin/CaptainAsteroid/install/Release/lib/: Physics.lib
NativePlugin/CaptainAsteroid/src/: AsteroidsAPI.cpp  AsteroidsAPI.hpp  CMakeLists.txt  CaptainAsteroidAPI.cpp  CaptainAsteroidAPI.hpp
NativePlugin/CaptainAsteroid/src/physics/: AsteroidsGame.cpp  AsteroidsGame.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  SpaceShip.cpp  SpaceShip.hpp
NativePlugin/CaptainAsteroid/src/physics/components/: AsteroidParent.hpp  AsteroidParentC.hpp  AsteroidSize.hpp  AsteroidSizeC.hpp  AsteroidTypeC.hpp  CMakeLists.txt  Death.hpp  DeathC.hpp  Identity.hpp  IdentityC.hpp  Laser.hpp  LaserC.cpp  LaserC.hpp  LifeTime.hpp  LifeTimeC.hpp  Motion.hpp  MotionC.cpp  MotionC.hpp  PlayerControl.hpp  PlayerControlC.cpp  PlayerControlC.hpp  Position.hpp  PositionC.cpp  PositionC.hpp  Radius.hpp  RadiusC.hpp
NativePlugin/CaptainAsteroid/src/physics/entities/: AsteroidField.cpp  AsteroidField.hpp  LaserShots.cpp  LaserShots.hpp  SpaceShip.cpp  SpaceShip.hpp
NativePlugin/CaptainAsteroid/src/physics/events/: AsteroidDestroyed.hpp  AsteroidDestroyedE.hpp  CMakeLists.txt  GameOver.hpp  GameOverE.hpp  PlayGame.hpp  PlayGameE.hpp  PlayerInput.hpp  PlayerInputE.hpp  Victory.hpp  VictoryE.hpp
NativePlugin/CaptainAsteroid/src/physics/systems/: CMakeLists.txt  Collide.cpp  Collide.hpp  CollideS.cpp  CollideS.hpp  CollisionS.cpp  CollisionS.hpp  ControlByPlayer.cpp  ControlByPlayer.hpp  FireLaser.cpp  FireLaser.hpp  FireLaserS.cpp  FireLaserS.hpp  Move.cpp  Move.hpp  MoveS.cpp  MoveS.hpp  MovementS.cpp  MovementS.hpp  PlayerControl.cpp  PlayerControl.hpp  PlayerControlS.cpp  PlayerControlS.hpp  ReduceLifeTime.cpp  ReduceLifeTime.hpp  ReduceLifeTimeS.cpp  ReduceLifeTimeS.hpp  RemoveDead.cpp  RemoveDead.hpp  RemoveDeadS.cpp  RemoveDeadS.hpp  SplitAsteroid.cpp  SplitAsteroid.hpp  SplitAsteroidS.cpp  SplitAsteroidS.hpp
NativePlugin/CaptainAsteroid/src/utils/: CMakeLists.txt  Define.hpp  logging.hpp  utils.cpp  utils.hpp
(+80 files in other folders)
